--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -102,7 +102,7 @@ alert(typeof message); // "string"
 alert(typeof 95); // "number"
 ```
 
-4. 复杂的数据类型：`Object`，Object 本质上是由一组无序的键值对组成的
+4. 复杂的数据类型：`Object`，`Object` 本质上是由一组无序的键值对组成的
 
 5. 由于`ECMAScript`数据类型具有动态性，因此的确没有再定义其他数据类型的必要了
 
@@ -140,16 +140,16 @@ alert(typeof age); // "undefined"
 
 :::snippet Null 类型
 
-1. Null 类型的值只有`null`，typeof 检测返回 object 类型
-2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 true
+1. `Null` 类型的值只有`null`，`typeof` 检测返回 `object` 类型
+2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 `true`
 
 ```JavaScript
 alert(null == undefined); //true
 alert(null === undefined); //false
 ```
 
-3. 推荐声明对象为 null 尽量赋值 null，这样做不仅可以体现 null 作为空对象指针的惯例，
-   而且也有助于进一步区分 null 和 undefined。
+3. 推荐声明对象为 `null` 尽量赋值 `null`，这样做不仅可以体现 `null` 作为空对象指针的惯例，
+   而且也有助于进一步区分 `null` 和 `undefined`。
 
 ```JavaScript
 var params = null;
@@ -159,9 +159,9 @@ var params = null;
 
 :::snippet Boolean 类型
 
-1. Boolean 类型只有两个字面值：`true` 和 `false`
+1. `Boolean` 类型只有两个字面值：`true` 和 `false`
 
-2. 将一个值转换为其对应的 Boolean 值，可以调用转型函数 Boolean()
+2. 将一个值转换为其对应的 `Boolean` 值，可以调用转型函数 `Boolean()`
 
 ```JavaScript
 var message = "Hello world!";
@@ -178,7 +178,7 @@ var messageAsBoolean = Boolean(message);
 | Object    | 任何对象                     | null            |
 | Undefined | -                            | undefined       |
 
-4. 流程语句判断会自动执行 Boolean 转换
+4. 流程语句判断会自动执行 `Boolean` 转换
 
 ```JavaScript
 var message = "Hello world!";
@@ -191,7 +191,7 @@ if (message){
 
 :::snippet Number 类型
 
-1. 使用 IEEE754 格式来表示整数和浮点数值
+1. 使用 `IEEE754` 格式来表示整数和浮点数值
 2. 数值的进制表示
 
 ```JavaScript
@@ -250,7 +250,7 @@ alert(isNaN("blue")); //true（不能转换成数值）
 alert(isNaN(true)); //false（可以被转换成数值1）
 ```
 
-只有 0 除以 0 才会返回 NaN，正数除以 0 返回 Infinity，负数除以 0 返回-Infinity。
+只有 `0` 除以 `0` 才会返回 `NaN`，正数除以 `0` 返回 `Infinity`，负数除以 `0` 返回`-Infinity`。
 `isNaN()`也适用于对象，先调用对象 `valueOf` 不能转为数值，在调用 `toString()`方法
 
 > NaN 不等于 NaN ，也不等于任何数值
@@ -283,7 +283,7 @@ Number("");//0
 Number("hello");//NaN
 ```
 
-> Number(null)等于 0，Number(undefined，返回 NaN。)等于 NaN
+> Number(null)等于 0，Number(undefined)等于 NaN
 
 `parseInt()`方法
 
