--- a/src/notes/javascript/03.md
+++ b/src/notes/javascript/03.md
@@ -40,7 +40,7 @@ var num7 = num5-- + num6; // 等于22
 var num8 = num5 + num6; // 等于21
 ```
 
-4. 递增递减的类型转换，先调用 Number 方法进行转换在递增递减操作
+4. 递增递减的类型转换，先调用 `Number()` 方法进行转换在递增递减操作
 
 ```JavaScript
 var s1 = "2";
@@ -56,14 +56,14 @@ s1++; // 值变成数值3
 s2++; // 值变成NaN
 b++; // 值变成数值1
 f--; // 值变成0.10000000000000009（由于浮点舍入错误所致）
-o--; // 值变成数值-2
+o--; // 值变成数值-2,调用valueof在进行Number转换计算
 ```
 
 :::
 
 :::snippet 一元加和减操作符
 
-1. 一元加和减操作符，基本也是先进行 Number 方法转换在进行操作符运算
+1. 一元加和减操作符，基本也是先进行 `Number()` 方法转换在进行操作符运算
 2. 一元加操作符基本没什么用处
 
 ```JavaScript
@@ -110,7 +110,7 @@ var num = -18;
 alert(num.toString(2)); // "-10010"
 ```
 
-5. 按位非（NOT）,由一个波浪线（~）表示，按位非操作的本质：操作数的负值减 1
+5. 按位非（`NOT`）,由一个波浪线（`~`）表示，按位非操作的本质：操作数的负值减 1
 
 ```JavaScript
 var num1 = 25; // 二进制00000000000000000000000000011001
@@ -124,7 +124,7 @@ var num2 = -num1 - 1;
 alert(num2); // "-26"
 ```
 
-6. 按位与（AND），符由一个和号字符（&）表示，本质二进制的与运算
+6. 按位与（`AND`），符由一个和号字符（`&`）表示，本质二进制的与运算
 
 ```JavaScript
 var result = 25 & 3;
@@ -136,7 +136,7 @@ alert(result); //1
 AND = 0000 0000 0000 0000 0000 0000 0000 0001
 ```
 
-7. 按位异或（XOR），由一个插入符号（^）表示，本质二进制的运算，相同返回 0，不同返回 1
+7. 按位异或（`XOR`），由一个插入符号（`^`）表示，本质二进制的运算，相同返回 0，不同返回 1
 
 ```JavaScript
 var result = 25 ^ 3;
@@ -148,21 +148,21 @@ alert(result); //26
 XOR = 0000 0000 0000 0000 0000 0000 0001 1010
 ```
 
-8. 左移，由两个小于号（<<）表示，二进制左移动几位后面补几个 0，第一位符号位不操作
+8. 左移，由两个小于号（`<<`）表示，二进制左移动几位后面补几个 `0`，第一位符号位不操作
 
 ```JavaScript
 var oldValue = 2; // 等于二进制的10
 var newValue = oldValue << 5; // 等于二进制的1000000，十进制的64
 ```
 
-9. 有符号右移，由 2 个大于号（>>）表示，二进制向右去掉几位其他前置的位数补对应的 0 的个数，第一位符号位不操作
+9. 有符号右移，由 2 个大于号（`>>`）表示，二进制向右去掉几位其他前置的位数补对应的 `0` 的个数，第一位符号位不操作
 
 ```JavaScript
 var oldValue = 64; // 等于二进制的1000000
 var newValue = oldValue >>> 5; // 等于二进制的10 ，即十进制的2
 ```
 
-10. 无符号右移，由 3 个大于号（>>>）表示，二进制包含符号位向右移动，左侧补 0
+10. 无符号右移，由 3 个大于号（`>>>`）表示，二进制包含符号位向右移动，左侧补 `0`
 
 ```JavaScript
 var oldValue = 64; // 等于二进制的1000000
@@ -178,7 +178,7 @@ var newValue = oldValue >>> 5; // 等于十进制的134217726
 
 :::snippet 布尔操作符
 
-1. 逻辑非，由一个叹号（!）,计算先进行 Boolean 方法转换在进行取反
+1. 逻辑非，由一个叹号（`!`）,计算先进行 `Boolean()` 方法转换在进行取反
 
 ```JavaScript
 alert(!false); // true
@@ -189,7 +189,7 @@ alert(!""); // true
 alert(!12345); // false
 ```
 
-2. 逻辑与，两个和号（&&）表示，从左往右，只要有 false 就返回 false 否则返回最后一个值
+2. 逻辑与，两个和号（`&&`）表示，从左往右，只要有 `false` 就返回 `false` 否则返回最后一个值
 
 ```JavaScript
 var found = true;
@@ -207,7 +207,7 @@ alert(result); // 会执行（"false"）
 var result = 6 && 7 && 8 //结果为8
 ```
 
-3. 逻辑或，由两个竖线符号（||）表示，从左往右，只要有可以转为 true 的值就返回否则返回 false
+3. 逻辑或，由两个竖线符号（`||`）表示，从左往右，只要有可以转为 `true` 的值就返回否则返回 `false`
 
 ```JavaScript
 var found = true;
@@ -229,19 +229,19 @@ var result = 6 && 7 && 8 //结果为6
 
 :::snippet 乘性操作符
 
-1. 乘法，由一个星号（`*`）表示，用于计算两个数值的乘积，都先进行 Number 方法转换，在计算不可计算返回 NaN
+1. 乘法，由一个星号（`*`）表示，用于计算两个数值的乘积，都先进行 `Number()` 转换，在计算不可计算返回 `NaN`
 
 ```JavaScript
 var result = 34 * 56;
 ```
 
-2. 除法，由一个斜线符号（`/`）表示，用于计算两个数的商，都先进行 Number 方法转换，在计算不可计算返回 NaN
+2. 除法，由一个斜线符号（`/`）表示，用于计算两个数的商，都先进行 `Number()` 转换，在计算不可计算返回 `NaN`
 
 ```JavaScript
 var result = 66 / 11;
 ```
 
-3. 求模,由一个百分号（`%`）表示，用于计算两个数的余数，都先进行 Number 方法转换，在计算不可计算返回 NaN
+3. 求模,由一个百分号（`%`）表示，用于计算两个数的余数，都先进行 `Number()` 转换，在计算不可计算返回 `NaN`
 
 ```JavaScript
 var result = 26 % 5; // 等于1
@@ -251,7 +251,7 @@ var result = 26 % 5; // 等于1
 
 :::snippet 加性操作符
 
-1. 加法，直接将非数值的类型用 String 方法转换在进行相加
+1. 加法，直接将非数值的类型用 `String()` 方法转换在进行相加
 
 ```JavaScript
 var result1 = 5 + 5; // 两个数值相加
@@ -271,7 +271,7 @@ var message = "The sum of 5 and 10 is " + (num1 + num2);
 alert(message); //"The sum of 5 and 10 is 15"
 ```
 
-2. 减法，将非数值的进行 Number 方法转换在进行相减
+2. 减法，将非数值的进行 `Number()` 方法转换在进行相减
 
 ```JavaScript
 var result1 = 5 - true; // 4，因为true 被转换成了1
