--- a/src/notes/javascript/05.md
+++ b/src/notes/javascript/05.md
@@ -1,6 +1,6 @@
 :::snippet 数据类型
 
-1. 基本数据类型：Undefined、Null、Boolean、Number 和 String 是按值访问的，因为可以操作保存在变量中的实际的值。
+1. 基本数据类型：`Undefined`、`Null`、`Boolean`、`Number` 和 `String` 是按值访问的，因为可以操作保存在变量中的实际的值。
 2. 引用类型的值是保存在内存中的对象，JavaScript 不允许直接访问内存中的位置。
 3. 在操作对象时，实际上是在操作对象的引用而不是实际的对象。
 4. 在很多语言中，字符串以对象的形式来表示，因此被认为是引用类型的。ECMAScript 放弃了这一传统。
@@ -91,7 +91,7 @@ alert(person.name); //"Nicholas"
 :::snippet 检测类型
 
 1. 基本类型的检测可以使用关键字 `typeof` 来进行检测
-2. Object 类型对应的具体类型，要用`instanceof`来检测
+2. `Object` 类型对应的具体类型，要用`instanceof`来检测
 
 ```JavaScript
 alert(person instanceof Object); // 变量person 是Object 吗？
@@ -99,7 +99,7 @@ alert(colors instanceof Array); // 变量colors 是Array 吗？
 alert(pattern instanceof RegExp); // 变量pattern 是RegExp 吗？
 ```
 
-3. 5 中基本类型使用`instanceof`检测都会返回 false
+3. 5 中基本类型使用`instanceof`检测都会返回 `false`
 
 :::
 
@@ -114,7 +114,7 @@ alert(pattern instanceof RegExp); // 变量pattern 是RegExp 吗？
 
 :::snippet 延长作用域
 
-1. try-catch 语句的 catch 块。
+1. `try-catch` 语句的 `catch` 块
 
 ```JavaScript
 try {
@@ -124,7 +124,7 @@ try {
 }
 ```
 
-2. with 语句。
+2. `with` 语句
 
 ```JavaScript
 function buildUrl() {
@@ -140,7 +140,7 @@ function buildUrl() {
 
 :::snippet 没有块级作用域
 
-1. 由于不存在块级作用域，i 变量定义后为`window`对象的属性成为全局变量，所以循环完后 i 的值为 10
+1. 由于不存在块级作用域，`i` 变量定义后为`window`对象的属性成为全局变量，所以循环完后 i 的值为 10
 
 ```JavaScript
 for (var i=0; i < 10; i++){
@@ -157,7 +157,7 @@ function add(num1, num2) {
     return sum;
 }
 var result = add(10, 20); //30
-    alert(sum); //由于sum 不是有效的变量，因此会导致错误
+alert(sum); //由于sum 不是有效的变量，因此会导致错误
 ```
 
 ```JavaScript
