--- a/src/notes/javascript/16.md
+++ b/src/notes/javascript/16.md
@@ -85,7 +85,7 @@ var sheet = getStylesheet(link);
 3. offsetLeft：元素的左外边框至包含元素的左内边框之间的像素距离。
 4. offsetTop：元素的上外边框至包含元素的上内边框之间的像素距离。
 
-![元素偏移量](../../assets/images/javascript-16-01.png)
+![元素偏移量](../../assets/images/javascript-16-01.svg)
 
 :::
 
