--- a/src/notes/javascript/16.md
+++ b/src/notes/javascript/16.md
@@ -107,7 +107,7 @@ function getViewport() {
 }
 ```
 
-![客户区大小](../../assets/images/javascript-16-02.png)
+![客户区大小](../../assets/images/javascript-16-02.svg)
 
 :::
 
