--- a/src/notes/javascript/16.md
+++ b/src/notes/javascript/16.md
@@ -85,7 +85,7 @@ var sheet = getStylesheet(link);
 3. offsetLeft：元素的左外边框至包含元素的左内边框之间的像素距离。
 4. offsetTop：元素的上外边框至包含元素的上内边框之间的像素距离。
 
-![元素偏移量](../../assets/images/javascript-16-01.svg)
+![元素偏移量](../../assets/images/javascript-16-01.png)
 
 :::
 
@@ -107,7 +107,7 @@ function getViewport() {
 }
 ```
 
-![客户区大小](../../assets/images/javascript-16-02.svg)
+![客户区大小](../../assets/images/javascript-16-02.png)
 
 :::
 
@@ -118,7 +118,7 @@ function getViewport() {
 3. scrollLeft：被隐藏在内容区域左侧的像素数。通过设置这个属性可以改变元素的滚动位置。
 4. scrollTop：被隐藏在内容区域上方的像素数。通过设置这个属性可以改变元素的滚动位置。
 
-![滚动大小](../../assets/images/javascript-16-03.svg)
+![滚动大小](../../assets/images/javascript-16-03.png)
 
 ```javascript
 var docHeight = Math.max(
@@ -154,7 +154,7 @@ function getBoundingClientRect(element) {
 }
 ```
 
-![元素位置信息](../../assets/images/javascript-16-04.svg)
+![元素位置信息](../../assets/images/javascript-16-04.png)
 
 > IE、Firefox 3+、Safari 4+、Opera 9.5 及 Chrome 为每个元素都提供了一个 getBoundingClientRect()方法。
 > 这个方法返回会一个矩形对象，包含 4 个属性：left、top、right 和 bottom。这些属性给出了元素在页面中相对于视口的位置。
