--- a/src/notes/javascript/01.md
+++ b/src/notes/javascript/01.md
@@ -4,7 +4,7 @@
 2. Netscape 将 JavaScript 1.1 为蓝本的建议被提交给了欧洲计算机制造商协会（ECMA）制定了 JavaScript 的开发标准`ECMAScript`
 3. `ECMAScript`从`ECMAScript1`发展到`ECMAScript5`基本目前浏览器都兼容`ECMAScript5`的规范也就是`ES5`
 4. 2015 年发布了`ECMAScript 6`，部分浏览器可能还未支持，但是可以使用编译器编译成`ECMAScript 5`的代码
-5. 现在的 ECMAScript6 是比较大的统称包含 ECMAScript2016,ECMAScript2017，后续的版本号都是依据年份来定制的
+5. 现在的 `ECMAScript6` 是比较大的统称包含 `ECMAScript2016` , `ECMAScript2017` ，后续的版本号都是依据年份来定制的
 
 :::
 
