--- a/src/notes/javascript/03.md
+++ b/src/notes/javascript/03.md
@@ -287,7 +287,7 @@ var result6 = 5 - null; // 5，因为null 被转换成了0
 :::snippet 关系操作符
 
 1. 主要用于相互之间的比较，小于（`<`）、大于（`>`）、小于等于（`<=`）和大于等于（`>=`）
-2. 不可比较的对象先进行 String 方法转换在进行比较
+2. 不可比较的对象先进行 `String()` 方法转换在进行比较
 3. 字符串的比较都是进行编码的数值转换后比较
 4. 包含`NaN`的比较返回`false`
 
@@ -310,6 +310,8 @@ NaN != NaN //true
 "5"==5 //true
 false == 0 //true
 ```
+
+> javascript 在设计上`null==0`不进行转换所以不会转换在比较，所以返回 `false`
 
 2. 全等和不全等，不会进行类型转换，比较时进行值和数据类型相互比较
 
