--- a/src/notes/javascript/05.md
+++ b/src/notes/javascript/05.md
@@ -106,7 +106,7 @@ alert(pattern instanceof RegExp); // 变量pattern 是RegExp 吗？
 :::snippet 执行环境以及作用域
 
 1. 执行环境定义了变量或函数有权访问的其他数据，决定了它们各自的行为。
-2. web 浏览器定义全局执行环境就是`window`对象，因此所有全局变量和函数都是作为 window 对象的属性和方法创建的。
+2. web 浏览器定义全局执行环境就是`window`对象，因此所有全局变量和函数都是作为 `window` 对象的属性和方法创建的。
 3. 当代码在一个环境中执行时，会创建变量对象的一个作用域链，作用域链的用途，是保证对执行环境有权访问的所有变量和函数的有序访问。
 4. 标识符会从作用域一级一级往上找，直到全局作用域，找不到则报错
 
@@ -140,7 +140,7 @@ function buildUrl() {
 
 :::snippet 没有块级作用域
 
-1. 由于不存在块级作用域，`i` 变量定义后为`window`对象的属性成为全局变量，所以循环完后 i 的值为 10
+1. 由于不存在块级作用域，`i` 变量定义后为`window`对象的属性成为全局变量，所以循环完后 `i` 的值为 10
 
 ```JavaScript
 for (var i=0; i < 10; i++){
