--- a/src/notes/javascript/07.md
+++ b/src/notes/javascript/07.md
@@ -86,13 +86,13 @@ alert(colors.join("||")); //red||green||blue
 :::snippet Array 栈方法
 
 ```JavaScript
-var colors = new Array(); // 创建一个数组
-var count = colors.push("red", "green"); // 推入两项
+var colors = new Array();//创建一个数组
+var count = colors.push("red", "green"); //推入两项
 alert(count); //2
-count = colors.push("black"); // 推入另一项
-alert(count); //3
-var item = colors.pop(); // 取得最后一项
-alert(item); //"black"
+count = colors.push("black");//推入另一项
+alert(count);     //3
+var item = colors.shift();//取得第一项
+alert(item); //"red"
 alert(colors.length); //2
 ```
 
@@ -101,13 +101,13 @@ alert(colors.length); //2
 :::snippet Array 队列方法
 
 ```JavaScript
-var colors = new Array("yellow"); //创建一个数组
+var colors = new Array(); //创建一个数组
 var count = colors.unshift("red", "green"); //推入两项
-alert(count); //3
-count = colors.unshift("black"); //推入另一项
-alert(count); //3
-var item = colors.pop(); //取得最后一项
-alert(item); //"green"
+alert(count); //2
+count = colors.unshift("black");//推入另一项
+alert(count);   //3
+var item = colors.pop();//取得最后一项
+alert(item);    //"green"
 alert(colors.length); //2
 ```
 
@@ -137,11 +137,11 @@ alert(values); //0,1,10,15,5
 function compare(value1, value2) {
     if (value1 < value2) {
         return 1;
-    } else if (value1 > value2) {
-        return -1;
-    } else {
-        return 0;
     }
+    if (value1 > value2) {
+        return -1;
+    }
+    return 0;
 }
 var values = [0, 1, 5, 10, 15];
 values.sort(compare);
@@ -307,7 +307,7 @@ alert(sum); //15=>5+4+3+2+1
 
 ```JavaScript
 function sum (num1, num2) {
-return num1 + num2;
+    return num1 + num2;
 }
 ```
 
@@ -315,7 +315,7 @@ return num1 + num2;
 
 ```JavaScript
 var sum = function(num1, num2){
-return num1 + num2;
+    return num1 + num2;
 };
 ```
 
@@ -323,7 +323,7 @@ return num1 + num2;
 
 ```JavaScript
 var sum = new Function("num1", "num2", "return num1 + num2"); // 不推荐
-//第一次是解析常规ECMAScript 代码，第二次是解析传入构造函数中的字符串，从而影响性能
+//第一次是解析常规 ECMAScript 代码，第二次是解析传入构造函数中的字符串，从而影响性能
 ```
 
 > 函数定义后，不管何种方式定义，最终基本都是指向一个内存地址，变量名称只是一个指针
@@ -361,7 +361,7 @@ function sum(num1, num2){
 
 ```JavaScript
 alert(sum(10,10));//报错，sum的值为undefined
-    var sum = function(num1, num2){
+var sum = function(num1, num2){
     return num1 + num2;
 };
 ```
@@ -481,6 +481,6 @@ var objectSayColor = sayColor.bind(o,'蓝色');
 objectSayColor(); //blue蓝色
 ```
 
-> 支持 IE9+、Firefox 4+、Safari 5+、Opera 10.5+和 Chrome
+> bind 方法绑定后，其他地方调用 this 也是绑定好的值，支持 IE9+、Firefox 4+、Safari 5+、Opera 10.5+和 Chrome
 
 :::
