--- a/src/notes/javascript/06.md
+++ b/src/notes/javascript/06.md
@@ -17,7 +17,7 @@ age : 29
 };
 ```
 
-3. 在通过对象字面量定义对象时，实际上不会调用 Object 构造函数（Firefox 2 及更早版本会调用 Object 构造函数；但 Firefox 3 之后就不会了）。
+3. 在通过对象字面量定义对象时，实际上不会调用 `Object` 构造函数（Firefox 2 及更早版本会调用 Object 构造函数；但 Firefox 3 之后就不会了）。
 4. 对象属性的访问
 
 ```JavaScript
@@ -39,7 +39,7 @@ alert(person[propertyName]); //"Nicholas"
 var someDate = new Date(Date.parse("May 25, 2004"));
 ```
 
-2. 时间比较：Date 类型的 valueOf()方法，则根本不返回字符串，而是返回日期的毫秒表示
+2. 时间比较：`Date` 类型的 `valueOf()` 方法，则根本不返回字符串，而是返回日期的毫秒表示
 
 ```JavaScript
 var date1 = new Date(2007, 0, 1); //"January 1, 2007"
