--- a/src/notes/javascript/17.md
+++ b/src/notes/javascript/17.md
@@ -646,19 +646,21 @@ var isSupported = document.implementation.hasFeature("MutationEvents", "2.0");
 
 ```javascript
 var list = document.getElementById("myLinks");
-    EventUtil.addHandler(list, "click", function(event){
-        //通过事件冒泡获取单击的元素冒泡到上级元素判断类型参数触发事件
-        event = EventUtil.getEvent(event);
-        var target = EventUtil.getTarget(event);
-        switch(target.id){
-            case "doSomething":
-                document.title = "I changed the document's title";
-                break;
-            case "goSomewhere":
-                location.href = "http://www.wrox.com";
-                break;
-      case "sayHi": 9 alert("hi");
-break; }
+EventUtil.addHandler(list, "click", function(event) {
+  //通过事件冒泡获取单击的元素冒泡到上级元素判断类型参数触发事件
+  event = EventUtil.getEvent(event);
+  var target = EventUtil.getTarget(event);
+  switch (target.id) {
+    case "doSomething":
+      document.title = "I changed the document's title";
+      break;
+    case "goSomewhere":
+      location.href = "http://www.wrox.com";
+      break;
+    case "sayHi":
+      alert("hi");
+      break;
+  }
 });
 ```
 
