--- a/src/notes/javascript/09.md
+++ b/src/notes/javascript/09.md
@@ -38,7 +38,7 @@ var person = {
 | writable     | 表示能否修改属性的值                         | true      |
 | value        | 包含这个属性的数据值                         | undefined |
 
-2. `configurable` 设置为 false 就不能再设置为 true
+2. `configurable` 设置为 `false` 就不能再设置为 `true`
 
 ```javascript
 var person = {};
