--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -6,7 +6,6 @@
 function functionName(arg0, arg1, arg2) {
   //函数体
 }
-
 //只在 Firefox、Safari、Chrome 和 Opera 有效
 alert(functionName.name); //"functionName"
 ```
@@ -93,11 +92,11 @@ function createComparisonFunction(propertyName) {
     var value2 = object2[propertyName];
     if (value1 < value2) {
       return -1;
-    } else if (value1 > value2) {
-      return 1;
-    } else {
-      return 0;
     }
+    if (value1 > value2) {
+      return 1;
+    }
+    return 0;
   };
 }
 ```
@@ -119,7 +118,7 @@ function factorial(num) {
 }
 ```
 
-2. 函数引用，声明函数在设置为 null 会导致函数引用都为 null 调用函数会报错
+2. 函数引用，声明函数在设置为 `null` 会导致函数引用都为 `null` 调用函数会报错
 
 ```javascript
 var anotherFactorial = factorial;
@@ -142,13 +141,12 @@ function factorial(num) {
 4. 通用的递归函数，采用匿名函数表达式来构建
 
 ```javascript
-var factorial = (function f(num){
-    if (num <= 1){
-        return 1;
-    } else {
-        return num * f(num-1);
-    }
-}
+var factorial = function f(num) {
+  if (num <= 1) {
+    return 1;
+  }
+  return num * f(num - 1);
+};
 ```
 
 :::
@@ -165,11 +163,11 @@ function createComparisonFunction(propertyName) {
     var value2 = object2[propertyName];
     if (value1 < value2) {
       return -1;
-    } else if (value1 > value2) {
-      return 1;
-    } else {
-      return 0;
     }
+    if (value1 > value2) {
+      return 1;
+    }
+    return 0;
   };
 }
 ```
@@ -182,18 +180,18 @@ function createComparisonFunction(propertyName) {
 function compare(value1, value2) {
   if (value1 < value2) {
     return -1;
-  } else if (value1 > value2) {
-    return 1;
-  } else {
-    return 0;
   }
+  if (value1 > value2) {
+    return 1;
+  }
+  return 0;
 }
 var result = compare(5, 10);
 ```
 
-1. 定义了 compare()函数，全局作用域调用会保存引用到全局作用域中
-2. 当调用 compare()时，会 创建一个包含 arguments、value1 和 value2 的活动对象，活动对象的作用域在该函数内部
-3. 全局执行环境的变量对象(包含 result 和 compare)在 compare()执行环境的作用域链，函数执行完成只会最终保留结果作用域
+1. 定义了 `compare()` 函数，全局作用域调用会保存引用到全局作用域中
+2. 当调用 `compare()` 时，会创建一个包含 `arguments` 、 `value1` 和 `value2` 的活动对象，活动对象的作用域在该函数内部
+3. 全局执行环境的变量对象(包含 `result` 和 `compare` )在 `compare()` 执行环境的作用域链，函数执行完成只会最终保留结果作用域
 
 > 无论什么时候在函数中访问一个变量时，就会从作用域链中搜索具有相应名字的变量，执行完毕局部对象就会被销毁，但是闭包将参数、引用变量添加到调用的作用域上所以函数执行完毕，局部对象也还未被销毁，只有所有的引用对象被释放才会被销毁
 
@@ -201,7 +199,7 @@ var result = compare(5, 10);
 
 :::snippet 内存占用销毁
 
-执行函数完成，无需再调用该函数可以设置为 null 释放内存销毁对象
+执行函数完成，无需再调用该函数可以设置为 `null` 释放内存销毁对象
 
 ```javascript
 //创建函数
