--- a/src/notes/javascript/21.md
+++ b/src/notes/javascript/21.md
@@ -278,3 +278,139 @@ alert(bookCopy.releaseDate.getFullYear());
 > IE8 以前不支持 JSON 对象方法可以使用 [json2.js](https://github.com/douglascrockford/JSON-js/blob/master/json2.js)
 
 :::
+
+:::snippet XMLHttpRequest 对象
+
+1. IE8 以前 XHR 是 MSXML 库中的一个 ActiveX 对象实现的，其他浏览器可以直接使用 XMLHttpRequest
+
+```javascript
+function createXHR() {
+  if (typeof XMLHttpRequest != "undefined") {
+    return new XMLHttpRequest();
+  } else if (typeof ActiveXObject != "undefined") {
+    if (typeof arguments.callee.activeXString != "string") {
+      var versions = [
+          "MSXML2.XMLHttp.6.0",
+          "MSXML2.XMLHttp.3.0",
+          "MSXML2.XMLHttp"
+        ],
+        i,
+        len;
+
+      for (i = 0, len = versions.length; i < len; i++) {
+        try {
+          new ActiveXObject(versions[i]);
+          arguments.callee.activeXString = versions[i];
+          break;
+        } catch (ex) {
+          //跳过
+        }
+      }
+    }
+    return new ActiveXObject(arguments.callee.activeXString);
+  } else {
+    throw new Error("No XHR object available.");
+  }
+}
+```
+
+2. XHR 消息状态属性
+
+| 属性         | 描述                                                                                               |
+| :----------- | :------------------------------------------------------------------------------------------------- |
+| responseText | 作为响应主体被返回的文本。                                                                         |
+| responseXML  | 如果响应的内容类型是"text/xml"或"application/xml"，这个属性中将保存包含着响应数据的 XML DOM 文档。 |
+| status       | 响应的 HTTP 状态。                                                                                 |
+| statusText   | HTTP 状态的说明。                                                                                  |
+
+3. 同步消息处理
+
+```javascript
+xhr.open("get", "example.txt", false);
+xhr.send(null);
+if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+  alert(xhr.responseText);
+} else {
+  alert("Request was unsuccessful: " + xhr.status);
+}
+```
+
+4. 异步请求状态 readyState
+
+| 值  | 描述                                                       |
+| :-- | :--------------------------------------------------------- |
+| 0   | 未初始化。尚未调用 open()方法。                            |
+| 1   | 启动。已经调用 open()方法，但尚未调用 send()方法。         |
+| 2   | 发送。已经调用 send()方法，但尚未接收到响应。              |
+| 3   | 接收。已经接收到部分响应数据。                             |
+| 4   | 完成。已经接收到全部响应数据，而且已经可以在客户端使用了。 |
+
+5. readyState 值改变触发 readystatechange 事件
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+      alert(xhr.responseText);
+    } else {
+      alert("Request was unsuccessful: " + xhr.status);
+    }
+  }
+};
+xhr.open("get", "example.txt", true);
+xhr.send(null);
+```
+
+6. abort()方法取消请求
+
+```javascript
+xhr.abort();
+```
+
+:::
+
+:::snippet HTTP 头部信息
+
+1. 属性
+
+| 属性            | 描述                           |
+| :-------------- | :----------------------------- |
+| Accept          | 浏览器能够处理的内容类型。     |
+| Accept-Charset  | 浏览器能够显示的字符集。       |
+| Accept-Encoding | 浏览器能够处理的压缩编码。     |
+| Accept-Language | 浏览器当前设置的语言。         |
+| Connection      | 浏览器与服务器之间连接的类型。 |
+| Cookie          | 当前页面设置的任何 Cookie。    |
+| Host            | 发出请求的页面所在的域 。      |
+| Referer         | 发出请求的页面的 URI。         |
+| User-Agent      | 浏览器的用户代理字符串。       |
+
+2. setRequestHeader() 设置请求头
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+      alert(xhr.responseText);
+    } else {
+      alert("Request was unsuccessful: " + xhr.status);
+    }
+  }
+};
+xhr.open("get", "example.php", true);
+xhr.setRequestHeader("MyHeader", "MyValue");
+xhr.send(null);
+```
+
+> 要成功发送请求头部信息，必须在调用 open()方法之后且调用 send()方法 之前调用 setRequestHeader(),设置请求头信息有的浏览器不允许覆盖原有参数
+
+3. getResponseHeader()和 getAllResponseHeaders()方法获取请求头参数
+
+```javascript
+var myHeader = xhr.getResponseHeader("MyHeader");
+var allHeaders = xhr.getAllResponseHeaders();
+```
+
+:::
