--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -246,14 +246,13 @@ function createFunctions() {
 function createFunctions() {
   var result = new Array();
   for (var i = 0; i < 10; i++) {
-    result[i] = function(num) {
+    result[i] = (function(num) {
       return function() {
         return num;
-        return result;
       };
-    };
+    })(i);
   }
-  i;
+  return result;
 }
 ```
 
