--- a/src/notes/javascript/21.md
+++ b/src/notes/javascript/21.md
@@ -414,3 +414,338 @@ var allHeaders = xhr.getAllResponseHeaders();
 ```
 
 :::
+
+:::snippet GET 请求
+
+GET 请求主要用于查出服务器信息，传递参数需要经过 url 编码防止错误
+
+```javascript
+xhr.open("get", "example.php?name1=value1&name2=value2", true);
+```
+
+```javascript
+function addURLParam(url, name, value) {
+  url += url.indexOf("?") == -1 ? "?" : "&";
+  url += encodeURIComponent(name) + "=" + encodeURIComponent(value);
+  return url;
+}
+var url = "example.php";
+//添加参数
+url = addURLParam(url, "name", "Nicholas");
+url = addURLParam(url, "book", "Professional JavaScript");
+//初始化请求
+xhr.open("get", url, false);
+```
+
+:::
+
+:::snippet POST 请求
+
+POST 向服务传递需要被保存的数据
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {};
+if (xhr.readyState == 4) {
+  if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+    alert(xhr.responseText);
+  } else {
+    alert("Request was unsuccessful: " + xhr.status);
+  }
+}
+xhr.open("post", "postexample.php", true);
+xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+var form = document.getElementById("user-info");
+xhr.send(serialize(form));
+```
+
+:::
+
+:::snippet XMLHttpRequest 2 级
+
+1. FormData
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+      alert(xhr.responseText);
+    } else {
+      alert("Request was unsuccessful: " + xhr.status);
+    }
+  }
+};
+xhr.open("post", "postexample.php", true);
+var form = document.getElementById("user-info");
+xhr.send(new FormData(form));
+```
+
+> 支持 FormData 的浏览器有 Firefox 4+、Safari 5+、Chrome 和 Android 3+版 WebKit。
+
+2. 超时设定
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    try {
+      if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+        alert(xhr.responseText);
+      } else {
+        alert("Request was unsuccessful: " + xhr.status);
+      }
+    } catch (ex) {
+      //假设由 ontimeout 事件处理程序处理
+    }
+  }
+};
+
+xhr.open("get", "timeout.php", true);
+xhr.timeout = 1000; //将超时设置为1秒钟(仅适用于IE8+)
+xhr.ontimeout = function() {
+  alert("Request did not return in a second.");
+};
+xhr.send(null);
+```
+
+3. overrideMimeType()方法设强制指定返回内容的处理类型文件或者 XML 等
+
+```javascript
+var xhr = createXHR();
+xhr.open("get", "text.php", true);
+xhr.overrideMimeType("text/xml");
+xhr.send(null);
+```
+
+> 支持 overrideMimeType()方法的浏览器有 Firefox、Safari 4+、Opera 10.5 和 Chrome。
+
+:::
+
+:::snippet XHR 进度事件
+
+| 事件      | 描述                                                 |
+| :-------- | :--------------------------------------------------- |
+| loadstart | 在接收到响应数据的第一个字节时触发。                 |
+| progress  | 在接收响应期间持续不断地触发。                       |
+| error     | 在请求发生错误时触发。                               |
+| abort     | 在因为调用 abort()方法而终止连接时触发。             |
+| load      | 在接收到完整的响应数据时触发。                       |
+| loadend   | 在通信完成或者触发 error、abort 或 load 事件后触发。 |
+
+> 可以用 load 代替 readystatechange 事件，只有部分浏览器支持进度事件
+
+:::
+
+:::snippet CORS
+
+CORS(Cross-Origin Resource Sharing，跨源资源共享)，使用自定义的 HTTP 头部 让浏览器与服务器进行沟通，从而决定请求或响应是应该成功，还是应该失败。
+一个简单的使用 GET 或 POST 发送的请求，它没有自定义的头部，而主体内容是 text/plain。
+在 发送该请求时，需要给它附加一个额外的 Origin 头部，其中包含请求页面的源信息(协议、域名和端 口)，以便服务器根据这个头部信息来决定是否给予响应。
+Origin 头部示例:`Origin: http://www.nczonline.net`
+如果服务器认为这个请求可以接受，就在 `Access-Control-Allow-Origin` 头部中回发相同的源信息(如果是公共资源，可以回发"`*`")。
+例如:`Access-Control-Allow-Origin`: `http://www.nczonline.net`
+如果没有这个头部，或者有这个头部但源信息不匹配，浏览器就会驳回请求。
+正常情况下，浏览器 会处理请求。注意，请求和响应都不包含 `cookie` 信息。
+
+:::
+
+:::snippet IE 对 CORS 的实现
+
+IE8 中引入了 XDR(XDomainRequest)类型。这个对象与 XHR 类似，但能实现安全可靠 的跨域通信。XDR 对象的安全机制部分实现了 W3C 的 CORS 规范
+
+- cookie 不会随请求发送，也不会随响应返回。
+- 只能设置请求头部信息中的 Content-Type 字段。
+- 不能访问响应头部信息。
+- 只支持 GET 和 POST 请求。
+
+> 这些变化使 CSRF(Cross-Site Request Forgery，跨站点请求伪造)和 XSS(Cross-Site Scripting，跨 站点脚本)的问题得到了缓解
+
+```javascript
+var xdr = new XDomainRequest();
+xdr.onload = function() {
+  alert(xdr.responseText);
+};
+xdr.onerror = function() {
+  alert("An error occurred.");
+};
+xdr.open("post", "http://www.somewhere-else.com/page/");
+xdr.contentType = "application/x-www-form-urlencoded";
+xdr.send("name1=value1&name2=value2");
+```
+
+:::
+
+:::snippet 其他浏览器对 CORS 的实现
+
+Firefox 3.5+、Safari 4+、Chrome、iOS 版 Safari 和 Android 平台中的 WebKit 都通过 XMLHttpRequest 对象实现了对 CORS 的原生支持
+
+```javascript
+var xhr = createXHR();
+xhr.onreadystatechange = function() {
+  if (xhr.readyState == 4) {
+    if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+      alert(xhr.responseText);
+    } else {
+      alert("Request was unsuccessful: " + xhr.status);
+    }
+  }
+};
+xhr.open("get", "http://www.somewhere-else.com/page/", true);
+xhr.send(null);
+```
+
+- 不能使用 `setRequestHeader()` 设置自定义头部。
+- 不能发送和接收 `cookie`。
+- 调用 `getAllResponseHeaders()` 方法总会返回空字符串。
+
+:::
+
+:::snippet Preflighted Reqeusts
+
+CORS 通过一种叫做 Preflighted Requests 的透明服务器验证机制支持开发人员使用自定义的头部、 GET 或 POST 之外的方法，以及不同类型的主体内容。
+在使用下列高级选项来发送请求时，就会向服务 器发送一个 Preflight 请求。这种请求使用 OPTIONS 方法，发送下列头部。
+
+```javascript
+Origin: http://www.nczonline.net
+Access-Control-Request-Method: POST
+Access-Control-Request-Headers: NCZ
+```
+
+```javascript
+Access-Control-Allow-Origin: http://www.nczonline.net
+Access-Control-Allow-Methods: POST, GET
+Access-Control-Allow-Headers: NCZ
+Access-Control-Max-Age: 1728000
+```
+
+> Preflight 请求结束后，结果将按照响应中指定的时间缓存起来。而为此付出的代价只是第一次发送 这种请求时会多一次 HTTP 请求。
+> 支持 Preflight 请求的浏览器包括 Firefox 3.5+、Safari 4+和 Chrome。IE 10 及更早版本都不支持。
+
+:::
+
+:::snippet 带凭据的请求
+
+默认情况下，跨源请求不提供凭据(cookie、HTTP 认证及客户端 SSL 证明等)。通过将 withCredentials 属性设置为 true，可以指定某个请求应该发送凭据。
+如果服务器接受带凭据的请 求，会用下面的 HTTP 头部来响应。
+
+```javascript
+Access-Control-Allow-Credentials: true
+```
+
+> 支持 withCredentials 属性的浏览器有 Firefox 3.5+、Safari 4+和 Chrome。IE 10 及更早版本都不 9 支持
+
+:::
+
+:::snippet 跨浏览器的 CORS
+
+| 方法         | 描述                                   |
+| :----------- | :------------------------------------- |
+| abort()      | 用于停止正在进行的请求。               |
+| onerror      | 用于替代 onreadystatechange 检测错误。 |
+| onload       | 用于替代 onreadystatechange 检测成功。 |
+| responseText | 用于取得响应内容。                     |
+| send()       | 用于发送请求。                         |
+
+```javascript
+function createCORSRequest(method, url) {
+  var xhr = new XMLHttpRequest();
+  if ("withCredentials" in xhr) {
+    xhr.open(method, url, true);
+  } else if (typeof XDomainRequest != "undefined") {
+    vxhr = new XDomainRequest();
+    xhr.open(method, url);
+  } else {
+    xhr = null;
+  }
+  return xhr;
+}
+var request = createCORSRequest("get", "http://www.somewhere-else.com/page/");
+if (request) {
+  request.onload = function() {
+    //对 request.responseText 进行处理
+  };
+  request.send();
+}
+```
+
+:::
+
+:::snippet 其他跨域技术
+
+1. 图片访问不受限制，只能发送 GET 请求
+
+```javascript
+var img = new Image();
+img.onload = img.onerror = function() {
+  alert("Done!");
+};
+img.src = "http://www.example.com/test?name=Nicholas";
+```
+
+2. JSONP 本地定义一个方法加载 script 包含数据和调用本地的方法
+
+```javascript
+function handleResponse(response) {
+  alert(
+    "You’re at IP address " +
+      response.ip +
+      ", which is in " +
+      response.city +
+      ", " +
+      response.region_name
+  );
+}
+var script = document.createElement("script");
+//script脚本内容handleResponse(返回数据)
+script.src = "http://freegeoip.net/json/?callback=handleResponse";
+document.body.insertBefore(script, document.body.firstChild);
+```
+
+:::
+
+:::snippet Comet
+
+1. Comet：服务器像浏览器推送信息服务
+2. 短轮询，定时发送请求检测服务器返回数据是否更新
+3. 长轮询，发送请求一直等待服务器返回响应数据，响应后继续发请求等待
+
+:::
+
+:::snippet 服务器通信
+
+1. SSE：创建单向连接服务器可以返回信息触发事件
+
+```javascript
+var source = new EventSource("myevents.php");
+source.onmessage = function(event) {
+  var data = event.data; //处理数据
+};
+source.onerror = function(event) {
+  alert("error");
+};
+```
+
+> 支持 Firefox 6+、Safari 5+、Opera 11+、Chrome 和 iOS 4+版 Safari
+
+2. Web Sockets 和浏览器建立全双工通信
+
+```javascript
+var socket = new WebSocket("ws://www.example.com/server.php");
+socket.send("Hello world!");
+socket.onmessage = function(event) {
+  var data = event.data;
+  //处理数据
+};
+```
+
+:::
+
+:::snippet 同源策略
+
+同源策略是对 XHR 的一个主要约束，它为通信设置了“相同的域、相同的端口、相同的协议”这一限制。
+试图访问上述限制之外的资源，都会引发安全错误，除非采用被认可的跨域解决方案。
+这个解决 方案叫做 CORS(Cross-Origin Resource Sharing，跨源资源共享)，IE8 通过 XDomainRequest 对象支持 CORS，其他浏览器通过 XHR 对象原生支持 CORS。
+图像 Ping 和 JSONP 是另外两种跨域通信的技术， 但不如 CORS 稳妥。
+
+:::
