--- a/src/notes/javascript/01.md
+++ b/src/notes/javascript/01.md
@@ -18,12 +18,12 @@
 
 :::snippet BOM 主要内容
 
-1. 弹出新浏览器窗口的功能；
-2. 移动、缩放和关闭浏览器窗口的功能；
-3. 提供浏览器详细信息的`navigator`对象；
-4. 提供浏览器所加载页面的详细信息的`location`对象；
-5. 提供用户显示器分辨率详细信息的`screen`对象；
-6. 对`cookies`的支持；
+1. 弹出新浏览器窗口的功能
+2. 移动、缩放和关闭浏览器窗口的功能
+3. 提供浏览器详细信息的`navigator`对象
+4. 提供浏览器所加载页面的详细信息的`location`对象
+5. 提供用户显示器分辨率详细信息的`screen`对象
+6. 对`cookies`的支持
 7. 像`XMLHttpRequest`和 IE 的`ActiveXObject`这样的自定义对象
 
 :::
