--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -492,7 +492,7 @@ alert(person2.getName()); //"Michael"
 
 :::snippet 模块模式
 
-1. 匿名函数返回对象，限制内部变量操作，通过方法设置访问赋值同一个内部变量
+匿名函数返回对象，限制内部变量操作，通过方法设置访问赋值同一个内部变量
 
 ```javascript
 var singleton = (function() {
@@ -501,7 +501,7 @@ var singleton = (function() {
   function privateFunction() {
     return false;
   }
-  //特权/公有方法和属性
+  //特权公有方法和属性
   return {
     publicProperty: true,
     publicMethod: function() {
