--- a/src/notes/javascript/13.md
+++ b/src/notes/javascript/13.md
@@ -9,7 +9,7 @@
 :::snippet Node 类型
 
 1. DOM1 级定义了一个 Node 接口，该接口将由 DOM 中的所有节点类型实现
-2. 每个节点的`nodeType`都有其对应的类型
+2. 每个节点的 `nodeType` 都有其对应的类型
 
 | Node 类型                        | 值  |
 | :------------------------------- | :-- |
@@ -60,7 +60,7 @@ var secondChild = someNode.childNodes.item(1);
 var count = someNode.childNodes.length;
 ```
 
-2.  `childNodes` 保存着 NodeLsit 但是并非是一个 Array 的实例
+2. `childNodes` 保存着 `NodeList` 但是并非是一个 `Array` 的实例
 
 ```javascript
 //在IE8 及之前版本中无效
@@ -97,7 +97,7 @@ if (someNode.nextSibling === null) {
 
 :::snippet Node 操作
 
-1. appendChild() 方法
+1. `appendChild()` 方法
 
 ```javascript
 //动态创建新节点
@@ -110,7 +110,7 @@ alert(returnedNode == someNode.firstChild); //false
 alert(returnedNode == someNode.lastChild); //true
 ```
 
-2. insertBefore() 方法
+2. `insertBefore()` 方法
 
 ```javascript
 //插入后成为最后一个子节点
@@ -125,7 +125,7 @@ returnedNode = someNode.insertBefore(newNode, someNode.lastChild);
 alert(newNode == someNode.childNodes[someNode.childNodes.length - 2]); //true
 ```
 
-3. replaceChild() 方法
+3. `replaceChild()` 方法
 
 ```javascript
 //替换第一个子节点
@@ -134,7 +134,7 @@ var returnedNode = someNode.replaceChild(newNode, someNode.firstChild);
 returnedNode = someNode.replaceChild(newNode, someNode.lastChild);
 ```
 
-4. removeChild() 方法
+4. `removeChild()` 方法
 
 ```javascript
 //移除第一个子节点
@@ -143,7 +143,7 @@ var formerFirstChild = someNode.removeChild(someNode.firstChild);
 var formerLastChild = someNode.removeChild(someNode.lastChild);
 ```
 
-5. cloneNode()方法
+5. `cloneNode()` 方法
 
 ```html
 <ul>
@@ -162,10 +162,9 @@ var shallowList = myList.cloneNode(false);
 alert(shallowList.childNodes.length); //0
 ```
 
-> cloneNode()方法不会复制添加到 DOM 节点中的 JavaScript 属性，例如事件处
-> 理程序等。这个方法只复制特性、（在明确指定的情况下也复制）子节点，其他一切
-> 都不会复制。IE 在此存在一个 bug，即它会复制事件处理程序，所以我们建议在复制
-> 之前最好先移除事件处理程序。
+> cloneNode()方法不会复制添加到 DOM 节点中的 JavaScript 属性，例如事件处理程序等。
+> 这个方法只复制特性、（在明确指定的情况下也复制）子节点，其他一切都不会复制。
+> IE 在此存在一个 bug，即它会复制事件处理程序，所以我们建议在复制之前最好先移除事件处理程序。
 
 :::
 
@@ -241,7 +240,7 @@ var domain = document.domain;
 var referrer = document.referrer;
 ```
 
-3. document.domain 赋值可以使得子域名页面与主域名相互通信，不受跨域限制
+3. `document.domain` 赋值可以使得子域名页面与主域名相互通信，不受跨域限制
 
 ```javascript
 //假设页面来自于p2p.wrox.com 域
@@ -253,7 +252,7 @@ document.domain = "p2p.wrox.com"; //紧绷的（出错！）
 
 :::snippet Document 查找元素
 
-1. getElementById() 方法
+1. `getElementById()` 方法
 
 ```html
 <div id="myDiv">Some text</div>
@@ -263,7 +262,7 @@ document.domain = "p2p.wrox.com"; //紧绷的（出错！）
 var div = document.getElementById("myDiv"); //取得<div>元素的引用
 ```
 
-2. getElementsByTagName() 方法
+2. `getElementsByTagName()` 方法
 
 ```javascript
 var images = document.getElementsByTagName("img");
@@ -275,7 +274,7 @@ var myImage = images.namedItem("myImage");
 var myImage = images["myImage"];
 ```
 
-3. getElementsByName()方法
+3. `getElementsByName()` 方法
 
 ```html
 <fieldset>
@@ -306,17 +305,17 @@ var radios = document.getElementsByName("color");
 
 :::snippet Document 快捷方法
 
-1. document.anchors，包含文档中所有带`name` 特性的`<a>`元素；
-2. document.applets，包含文档中所有的`<applet>`元素，因为不再推荐使用`<applet>`元素，所以这个集合已经不建议使用了；
-3. document.forms，包含文档中所有的`<form>`元素，与 document.getElementsByTagName("form")得到的结果相同；
-4. document.images，包含文档中所有的`<img>`元素，与 document.getElementsByTagName("img")得到的结果相同；
-5. document.links，包含文档中所有带 href 特性的`<a>`元素。
+1. `document.anchors`：包含文档中所有带`name` 特性的`<a>`元素；
+2. `document.applets`：包含文档中所有的`<applet>`元素，因为不再推荐使用`<applet>`元素，所以这个集合已经不建议使用了；
+3. `document.forms`：包含文档中所有的`<form>`元素，与 document.getElementsByTagName("form")得到的结果相同；
+4. `document.images`：包含文档中所有的`<img>`元素，与 document.getElementsByTagName("img")得到的结果相同；
+5. `document.links`：包含文档中所有带 href 特性的`<a>`元素。
 
 :::
 
 :::snippet Document 写入
 
-通过 write()和 writeln()写入内容会被解析为 html 标签
+通过 `write()` 和 `writeln()` 写入内容会被解析为 `html` 标签
 
 ```html
 <html>
@@ -348,7 +347,7 @@ var radios = document.getElementsByName("color");
 | parentNode    | 可能是 Document 或 Element                                                     |
 | childNodes    | Element、Text、Comment、ProcessingInstruction、CDATASection 或 EntityReference |
 
-2. 访问元素的标签名，可以使用 nodeName 属性，也可以使用 tagName 属性
+2. 访问元素的标签名，可以使用 `nodeName` 属性，也可以使用 `tagName` 属性
 
 ```html
 <div id="myDiv"></div>
@@ -408,25 +407,25 @@ div.dir = "rtl";
 
 :::snippet Element 特性
 
-1. getAttribute() 方法
+1. `getAttribute()` 方法
 
 ```javascript
 var div = document.getElementById("myDiv");
 ```
 
-2. setAttribute() 方法
+2. `setAttribute()` 方法
 
 ```javascript
 div.setAttribute("id", "someOtherId");
 ```
 
-3. removeAttribute() 方法
+3. `removeAttribute()` 方法
 
 ```javascript
 div.removeAttribute("class");
 ```
 
-4. attributes 属性，预定义属性的`specified`为`true`
+4. `attributes` 属性，预定义属性的 `specified` 为 `true`
 
 ```javascript
 function outputAttributes(element) {
@@ -482,7 +481,7 @@ var div = document.createElement('<div id="myNewDiv" class="box"></div >');
 </ul>
 ```
 
-2. 根据 nodeType 来判断标签类型进行对应的操作
+2. 根据 `nodeType` 来判断标签类型进行对应的操作
 
 ```javascript
 for (var i = 0, len = element.childNodes.length; i < len; i++) {
@@ -538,7 +537,7 @@ for (var i = 0, len = element.childNodes.length; i < len; i++) {
 var textNode = document.createTextNode("<strong>Hello</strong> world!");
 ```
 
-2. 规范化文本节点，normalize() 合并同级相邻文本节点
+2. 规范化文本节点，`normalize()` 合并同级相邻文本节点
 
 ```javascript
 var element = document.createElement("div");
@@ -554,7 +553,7 @@ alert(element.childNodes.length); //1
 alert(element.firstChild.nodeValue); // "Hello world!Yippee!"
 ```
 
-3. 分割文本节点，splitText()拆分文本节点
+3. 分割文本节点，`splitText()` 拆分文本节点
 
 ```javascript
 var element = document.createElement("div");
@@ -649,7 +648,7 @@ alert(document.doctype.name); //"HTML"
 
 :::snippet DocumentFragment 类型
 
-1. 在所有节点类型中，只有 DocumentFragment 在文档中没有对应的标记。
+1. 在所有节点类型中，只有 `DocumentFragment` 在文档中没有对应的标记。
    DOM 规定文档片段（document fragment）是一种“轻量级”的文档，可以包含和控制节点，但不会像完整的文档那样占用额外的资源
 
 | 属性       | 描述                                                                           |
