--- a/src/notes/javascript/22.md
+++ b/src/notes/javascript/22.md
@@ -255,3 +255,54 @@ dataStore.save("BookInfo");
 3. 可以查询对象的具体字段信息
 
 :::
+
+:::snippet 创建平滑动画
+
+RequestAnimationFrame() 创建动画，浏览器提供可以使动画平滑
+
+```javascript
+(function() {
+  var requestAnimationFrame =
+    window.requestAnimationFrame ||
+    window.mozRequestAnimationFrame ||
+    window.webkitRequestAnimationFrame ||
+    window.msRequestAnimationFrame;
+  function draw(timestamp) {
+    //计算两次重绘的时间间隔
+    var drawStart = timestamp || Date.now(),
+      diff = drawStart - startTime; //使用 diff 确定下一步的绘制时间
+    //把 startTime 重写为这一次的绘制时间
+    startTime = drawStart;
+    //重绘 UI
+    requestAnimationFrame(draw);
+  }
+  startTime = window.mozAnimationStartTime || Date.now();
+  requestAnimationFrame(draw);
+})();
+```
+
+:::
+
+:::snippet Page Visibility API
+
+浏览器页面隐藏，最小化等浏览器可以获取状态执行对应的代码
+
+```javascript
+if (document.hidden || document.msHidden || document.webKitHidden) {
+  //页面隐藏了
+} else {
+  //页面未隐藏
+}
+```
+
+:::
+
+:::snippet 新兴 API
+
+1. Page Visibility API:让开发人员知道用户什么时候正在看着页面，而什么时候页面是隐藏的。
+2. Geolocation API:在得到许可的情况下，可以确定用户所在的位置。在移动 Web 应用中，这个 API 非常重要而且常用。
+3. File API:可以读取文件内容，用于显示、处理和上传。与 HTML5 的拖放功能结合，很容易就能创造出拖放上传功能。
+4. Web Timing:给出了页面加载和渲染过程的很多信息，对性能优化非常有价值。
+5. Web Workers:可以运行异步 JavaScript 代码，避免阻塞用户界面。在执行复杂计算和数据处理的时候，这个 API 非常有用;要不然，这些任务轻则会占用很长时间，重则会导致用户无法与 页面交互。
+
+:::
