--- a/src/notes/javascript/11.md
+++ b/src/notes/javascript/11.md
@@ -1,13 +1,13 @@
 :::snippet window 对象
 
-1. BOM 的核心对象是 window，它表示浏览器的一个实例
-2. 网页中定义的任何一个对象、变量和函数，都以 window 作为其 Global 对象，因此有权访问 parseInt()等方法
+1. `BOM` 的核心对象是 `window` ，它表示浏览器的一个实例
+2. 网页中定义的任何一个对象、变量和函数，都以 `window` 作为其 `Global` 对象，因此有权访问 `parseInt()` 等方法
 
 :::
 
 :::snippet window 全局作用域
 
-1. window 对象同时扮演着 ECMAScript 中 Global 对象的角色，因此所有在全局作用域中声明的变量、函数都会变成 window 对象的属性和方法
+1. `window` 对象同时扮演着 `ECMAScript` 中 `Global` 对象的角色，因此所有在全局作用域中声明的变量、函数都会变成 `window` 对象的属性和方法
 
 ```javascript
 var age = 29;
@@ -19,7 +19,7 @@ sayAge(); //29
 window.sayAge(); //29
 ```
 
-2. delete 删除全局变量
+2. `delete` 删除全局变量
 
 ```javascript
 var age = 29;
@@ -27,12 +27,12 @@ window.color = "red";
 //在IE < 9 时抛出错误，在其他所有浏览器中都返回false
 delete window.age;
 //在IE < 9 时抛出错误，在其他所有浏览器中都返回true
-delete window.color; //returns true
+delete window.color; //return true
 alert(window.age); //29
 alert(window.color); //undefined
 ```
 
-3. 通过 window 查询访问全局变量
+3. 通过 `window` 查询访问全局变量
 
 ```javascript
 //这里会抛出错误，因为 oldValue 未定义
@@ -46,8 +46,8 @@ var newValue = window.oldValue;
 
 :::snippet 窗口及框架关系
 
-1. 如果页面中包含框架，则每个框架都拥有自己的 window 对象，并且保存在 frames 集合中。
-2. 在 frames 集合中，可以通过数值索引(从 0 开始，从左至右，从上到下)或者框架名称来访问相应的 window 对象
+1. 如果页面中包含框架，则每个框架都拥有自己的 `window` 对象，并且保存在 `frames` 集合中。
+2. 在 `frames` 集合中，可以通过数值索引(从 0 开始，从左至右，从上到下)或者框架名来访问相应的 `window` 对象
 
 ```html
 <html>
@@ -64,22 +64,22 @@ var newValue = window.oldValue;
 </html>
 ```
 
-> 通过 window.frames[0] 或者 window.frames["topFrame"]来访问框架，不过最好用过 top.frames[0]访问，window.top 为最外层的窗口对象
+> 通过 `window.frames[0]` 或者 `window.frames["topFrame"]` 来访问框架，不过最好用过 `top.frames[0]` 访问，`window.top` 为最外层的窗口对象
 
 :::
 
 :::snippet 窗口对象关系
 
-1. window.parent 父级窗口对象
-2. window.top 顶层窗口对象
-3. window.self 当前窗口对象
+1. `window.parent` 父级窗口对象
+2. `window.top` 顶层窗口对象
+3. `window.self` 当前窗口对象
 
 :::
 
 :::snippet 窗口位置
 
 1. IE、Safari、Opera 和 Chrome 都提供了 screenLeft 和 screenTop 属性，分别用于表示窗口相对于屏幕左边和上边的位置
-2. Firefox 则在 6 screenX 和 screenY 属性中提供相同的窗口位置信息，Opera、Safari 和 Chrome 也同时支持这两个属性
+2. Firefox 则在 screenX 和 screenY 属性中提供相同的窗口位置信息，Opera、Safari 和 Chrome 也同时支持这两个属性
 3. 通用获取浏览器窗口窗口左边和上边的位置
 
 ```javascript
@@ -89,7 +89,7 @@ var topPos =
   typeof window.screenTop == "number" ? window.screenTop : window.screenY;
 ```
 
-4. 移动浏览器窗口位置 moveTo() 和 moveBy()方法
+4. 移动浏览器窗口位置 `moveTo()` 和 `moveBy()` 方法
 
 ```javascript
 //将窗口移动到屏幕左上角
@@ -102,16 +102,17 @@ window.moveTo(200, 300);
 window.moveBy(-50, 0);
 ```
 
-> moveTo() 和 moveBy() 两个方法可能会被浏览器禁用;而且，在 Opera 和 IE 7(及更高版本)中默认就 是禁用的。另外，这两个方法都不适用于框架，只能对最外层的 window 对象使用。
+> `moveTo()` 和 `moveBy()` 两个方法可能会被浏览器禁用。
+> 而且，在 Opera 和 IE 7(及更高版本)中默认就 是禁用的。另外，这两个方法都不适用于框架，只能对最外层的 window 对象使用。
 
 :::
 
 :::snippet 窗口大小
 
-1. IE9+、Firefox、Safari、Opera 和 Chrome 均为此提 供了 4 个属性:innerWidth、innerHeight、outerWidth 和 outerHeight
-2. 在 IE9+、Safari 和 Firefox 中，outerWidth 和 outerHeight 返回浏览器窗口本身的尺寸，而 innerWidth 和 innerHeight 则表示该容器中页面视图区的大小(减去边框宽度)
-3. 在 Chrome 中，outerWidth、outerHeight 与 innerWidth、innerHeight 返回相同的值，即视口(viewport)大小而非浏览器窗口大小
-4. 在 IE、Firefox、Safari、Opera 和 Chrome 中，document.documentElement.clientWidth 和 document.documentElement.clientHeight 中保存了页面视口的信息
+1. IE9+、Firefox、Safari、Opera 和 Chrome 均为此提 供了 4 个属性: `innerWidth` 、`innerHeight` 、`outerWidth` 和 `outerHeight`
+2. 在 IE9+、Safari 和 Firefox 中，`outerWidth` 和 `outerHeight` 返回浏览器窗口本身的尺寸，而 `innerWidth` 和 `innerHeight` 则表示该容器中页面视图区的大小(减去边框宽度)
+3. 在 Chrome 中，`outerWidth` 、 `outerHeight` 与 `innerWidth` 、 `innerHeight` 返回相同的值，即视口( `viewport` )大小而非浏览器窗口大小
+4. 在 IE、Firefox、Safari、Opera 和 Chrome 中，`document.documentElement.clientWidth` 和 `document.documentElement.clientHeight` 中保存了页面视口的信息
 
 ```javascript
 var pageWidth = window.innerWidth,
@@ -127,7 +128,7 @@ if (typeof pageWidth != "number") {
 }
 ```
 
-5. resizeTo()和 resizeBy()方法可以调整浏览器窗口的大小
+5. `resizeTo()` 和 `resizeBy()` 方法可以调整浏览器窗口的大小
 
 ```javascript
 //调整到 100×100
@@ -138,7 +139,7 @@ window.resizeBy(100, 50);
 window.resizeTo(300, 300);
 ```
 
-> resizeTo()和 resizeBy()，这两个方法与移动窗口位置的方法类似，也有可能被浏览器禁用;而且，在 Opera 和 IE7(及更高版本)中默认就是禁用的。另外，这两个方法同样不适用于框架，而只能对最外层的 window 对象使用。
+> `resizeTo()` 和 `resizeBy()` ，这两个方法与移动窗口位置的方法类似，也有可能被浏览器禁用;而且，在 Opera 和 IE7(及更高版本)中默认就是禁用的。另外，这两个方法同样不适用于框架，而只能对最外层的 window 对象使用。
 
 6. 移动设备窗口详细研究文章 [详细地址](http://t.cn/zOZs0Tz)
 
@@ -146,7 +147,7 @@ window.resizeTo(300, 300);
 
 :::snippet 导航和打开窗口
 
-1. window.open()方法既可以导航到一个特定的 URL，也可以打开一个新的浏览器窗口
+1. `window.open()` 方法既可以导航到一个特定的 URL，也可以打开一个新的浏览器窗口
 
 ```javascript
 //等同于< a href="http://www.wrox.com" target="topFrame"></a>
@@ -167,12 +168,11 @@ window.open(
 3. 打开窗口返回窗口的引用对象
 
 ```javascript
-var wroxWin = window.open("http://www.wrox.com/","wroxWindow",
-
-  //调整大小
-  wroxWin.resizeTo(500,500);
+var wroxWin = window.open("http://www.wrox.com/", "wroxWindow");
+//调整大小
+wroxWin.resizeTo(500, 500);
 //移动位置
-wroxWin.moveTo(100,100);
+wroxWin.moveTo(100, 100);
 ```
 
 4. 窗口的关闭，除了自己打开的窗口可以关闭，其他的窗口出于浏览器安全限制不可是调用关闭方法
@@ -182,7 +182,7 @@ wroxWin.close();
 alert(wroxWin.closed); //true
 ```
 
-5. 顶层窗体 top 新创建的 window 对象有一个 opener 属性，其中保存着打开它的原始窗口对象
+5. 顶层窗体 `top` 新创建的 `window` 对象有一个 `opener` 属性，其中保存着打开它的原始窗口对象
 
 ```javascript
 var wroxWin = window.open(
@@ -222,8 +222,9 @@ if (blocked) {
 ```javascript
 //不建议传递字符串!
 setTimeout("alert('Hello world!') ", 1000);
-//推荐的调用方式 setTimeout(function() {
-    alert("Hello world!");
+//推荐的调用方式
+setTimeout(function() {
+  alert("Hello world!");
 }, 1000);
 ```
 
@@ -242,9 +243,10 @@ clearTimeout(timeoutId);
 
 ```javascript
 //不建议传递字符串!
-setInterval ("alert('Hello world!') ", 10000);
-//推荐的调用方式 setInterval (function() {
-    alert("Hello world!");
+setInterval("alert('Hello world!') ", 10000);
+//推荐的调用方式
+setInterval(function() {
+  alert("Hello world!");
 }, 10000);
 ```
 
@@ -255,11 +257,12 @@ var num = 0;
 var max = 10;
 var intervalId = null;
 function incrementNumber() {
-    num++;
-//如果执行次数达到了 max 设定的值，则取消后续尚未执行的调用 if (num == max) {
-        clearInterval(intervalId);
-        alert("Done");
-    }
+  num++;
+  //如果执行次数达到了 max 设定的值，则取消后续尚未执行的调用
+  if (num == max) {
+    clearInterval(intervalId);
+    alert("Done");
+  }
 }
 intervalId = setInterval(incrementNumber, 500);
 ```
@@ -270,19 +273,19 @@ intervalId = setInterval(incrementNumber, 500);
 
 :::snippet 系统对话框
 
-```javascript
-1. alert() 直接弹出提示警告
-2. confirm() 提示确认对话框
+1. `alert()` 直接弹出提示警告
+2. `confirm()` 提示确认对话框
 
- if (confirm("Are you sure?")) {
-        alert("I'm so glad you're sure! ");
-    } else {
-        alert("I'm sorry to hear you're not sure. ");
+```javascript
+if (confirm("Are you sure?")) {
+  alert("I'm so glad you're sure! ");
+} else {
+  alert("I'm sorry to hear you're not sure. ");
 }
 intervalId = setInterval(incrementNumber, 500);
 ```
 
-3. prompt() 输入确认框
+3. `prompt()` 输入确认框
 
 ```javascript
 var result = prompt("What is your name? ", "");
@@ -291,7 +294,7 @@ if (result !== null) {
 }
 ```
 
-4. print() 打印对话框，find()查找对话框
+4. `print()` 打印对话框，`find()` 查找对话框
 
 ```javascript
 //显示“打印”对话框
@@ -335,16 +338,17 @@ function getQueryStringArgs() {
     //在 for 循环中使用
     i = 0,
     len = items.length;
-  //逐个将每一项添加到 args 对象中 for (i=0; i < len; i++){
-  item = items[i].split("=");
-  name = decodeURIComponent(item[0]);
-  value = decodeURIComponent(item[1]);
-  if (name.length) {
-    args[name] = value;
+  //逐个将每一项添加到 args 对象中
+  for (i = 0; i < len; i++) {
+    item = items[i].split("=");
+    name = decodeURIComponent(item[0]);
+    value = decodeURIComponent(item[1]);
+    if (name.length) {
+      args[name] = value;
+    }
+    return args;
   }
-  return args;
 }
-
 //假设查询字符串是?q=javascript&num=10
 var args = getQueryStringArgs();
 alert(args["q"]); //"javascript"
@@ -373,15 +377,15 @@ location.pathname = "mydir";
 location.port = 8080;
 ```
 
-> 每次修改 location 的属性(hash 除外)，页面都会以新 URL 重新加载。
+> 每次修改 `location` 的属性( `hash` 除外)，页面都会以新 URL 重新加载。
 
-3. replace() 不产生历史记录
+3. `replace()` 不产生历史记录
 
 ```javascript
 location.replace("http://www.wrox.com/");
 ```
 
-4. reload() 重新加载页面
+4. `reload()` 重新加载页面
 
 ```javascript
 location.reload(); //重新加载(有可能从缓存中加载)
@@ -458,9 +462,9 @@ navigator.registerContentHandler(
 
 :::snippet screen 对象
 
-1. screen 对象基本上只 用来表明客户端的能力，其中包括浏览器窗口外部的显示器的信息，如像素宽度和高度等
+1. `screen` 对象基本上只 用来表明客户端的能力，其中包括浏览器窗口外部的显示器的信息，如像素宽度和高度等
 2. 涉及移动设备的屏幕大小时，情况有点不一样。运行 iOS 的设备始终会像是把设备竖着拿在手里一 样，因此返回的值是 768×1024。
-3. Android 设备则会相应调用 screen.width 和 screen.height 的值。
+3. Android 设备则会相应调用 `screen.width` 和 `screen.height` 的值。
 
 :::
 
