--- a/src/notes/typescript/02.md
+++ b/src/notes/typescript/02.md
@@ -141,3 +141,22 @@ function f({ a, b = 0 } = { a: "" }): void {
 ```
 
 :::
+
+:::snippet 限定多种类型
+
+```typescript
+let array = (Array < string) | number | (boolean >= [1, "1", true]);
+let value: string | number = 5;
+```
+
+:::
+:::snippet 类型别名
+
+```typescript
+type PrimitiveArray = Array<string | number | boolean>;
+type MyNumber = number;
+type NgScope = ng.IScope;
+type Callback = () => void;
+```
+
+:::
