--- a/src/notes/typescript/02.md
+++ b/src/notes/typescript/02.md
@@ -150,6 +150,7 @@ let value: string | number = 5;
 ```
 
 :::
+
 :::snippet 类型别名
 
 ```typescript
@@ -157,6 +158,57 @@ type PrimitiveArray = Array<string | number | boolean>;
 type MyNumber = number;
 type NgScope = ng.IScope;
 type Callback = () => void;
+```
+
+:::
+
+:::snippet 只读数组
+
+```typescript
+let a: number[] = [1, 2, 3, 4];
+let ro: ReadonlyArray<number> = a;
+a = ro as number[];
+```
+
+:::
+
+:::snippet 接口
+
+1. 定义接口
+
+```typescript
+interface IInterface {
+  // 定义变量
+  label: string;
+  // 定义可选属性
+  width?: number;
+  // 定义只读属性
+  readonly name: string;
+  // 定义函数
+  readName(): string;
+  // 定义索引
+  [propName: string]: any;
+}
+```
+
+2. 实现接口
+
+```typescript
+class interfaceBaseClass implements IInterface {
+  label = "labelValue";
+  width = 100;
+  name = "interface";
+  readName() {
+    return this.name;
+  }
+  propKey = "propValiue";
+}
+```
+
+3. 接口参数限定
+
+```typescript
+let interfaceFunc = (params: IInterface): void => {};
 ```
 
 :::
