--- a/src/notes/typescript/02.md
+++ b/src/notes/typescript/02.md
@@ -1,51 +1,44 @@
-:::snippet 布尔值
+:::snippet 基础类型
+
+1. boolean
 
 ```typescript
-let isDone: boolean = false;
+let boolValue: boolean = false;
 ```
 
-:::
-
-:::snippet 数字
+2. 数字
 
 ```typescript
-let decLiteral: number = 6;
+let numberValue: number = 1;
 ```
 
-:::
-
-:::snippet 字符串
+3. 字符串
 
 ```typescript
-let name: string = "bob";
+let stringValue: string = "str";
 ```
 
-:::
-
-:::snippet 数组
+4. 数组
 
 ```typescript
-let list: number[] = [1, 2, 3];
-let list: Array<number> = [1, 2, 3];
-let list: [string, number] = ["hello", 10];
+let numberList: number[] = [1, 2, 3];
+let tList: Array<number> = [1, 2, 3];
+let objectlist: [string, number] = ["hello", 10];
+let readolyArray: ReadonlyArray<number> = [1, 2, 3, 4];
 ```
 
-:::
-
-:::snippet 枚举
+5. 枚举
 
 ```typescript
-enum Color {
+enum ColorEnum {
   Red = 1,
   Green = 2,
   Blue = 4
 }
-let c: Color = Color.Green;
+let color: ColorEnum = ColorEnum.Green;
 ```
 
-:::
-
-:::snippet Any
+6. any
 
 ```typescript
 let notSure: any = 4;
@@ -53,39 +46,25 @@ notSure = "maybe a string instead";
 notSure = false;
 ```
 
-:::
-
-:::snippet Void
-
-```typescript
-function warnUser(): void {
-  console.log("This is my warning message");
-}
-```
+7. void
 
 ```typescript
 let unusable: void = undefined;
 ```
 
-:::
-
-:::snippet Null
+8. null
 
 ```typescript
-let n: null = null;
+let nullValue: null = null;
 ```
 
-:::
-
-:::snippet Undefined
+9. undefined
 
 ```typescript
-let u: undefined = undefined;
+let undefinedValue: undefined = undefined;
 ```
 
-:::
-
-:::snippet Never
+10. never
 
 ```typescript
 function error(message: string): never {
@@ -93,27 +72,31 @@ function error(message: string): never {
 }
 ```
 
-:::
-
-:::snippet Object
+11. object
 
 ```typescript
-let obj: object = {};
+let objectValue: object = {};
 ```
 
 :::
 
 :::snippet 类型推断
 
-```typescript
-let someValue: any = "this is a string";
-let strLength: number = (<string>someValue).length;
-```
+1. 基本类型推断
 
 ```typescript
 let someValue: any = "this is a string";
+let strLength: number = (<string>someValue).length;
 let strLength: number = (someValue as string).length;
 ```
+
+2. dom 类型推断
+
+```typescript
+let window = <any>window;
+```
+
+> 类型推断可以调用对应的方法和属性
 
 :::
 
@@ -125,7 +108,7 @@ let { a, b }: { a: string; b: number } = { a: "string", b: 1 };
 
 ```typescript
 type C = { a: string; b?: number };
-function f({ a, b }: C): void {
+function func({ a, b }: C): void {
   // ...
 }
 ```
@@ -145,7 +128,7 @@ function f({ a, b = 0 } = { a: "" }): void {
 :::snippet 限定多种类型
 
 ```typescript
-let array = (Array < string) | number | (boolean >= [1, "1", true]);
+let array: Array<string | number | boolean> = [1, "1", true];
 let value: string | number = 5;
 ```
 
@@ -158,57 +141,6 @@ type PrimitiveArray = Array<string | number | boolean>;
 type MyNumber = number;
 type NgScope = ng.IScope;
 type Callback = () => void;
-```
-
-:::
-
-:::snippet 只读数组
-
-```typescript
-let a: number[] = [1, 2, 3, 4];
-let ro: ReadonlyArray<number> = a;
-a = ro as number[];
-```
-
-:::
-
-:::snippet 接口
-
-1. 定义接口
-
-```typescript
-interface IInterface {
-  // 定义变量
-  label: string;
-  // 定义可选属性
-  width?: number;
-  // 定义只读属性
-  readonly name: string;
-  // 定义函数
-  readName(): string;
-  // 定义索引
-  [propName: string]: any;
-}
-```
-
-2. 实现接口
-
-```typescript
-class interfaceBaseClass implements IInterface {
-  label = "labelValue";
-  width = 100;
-  name = "interface";
-  readName() {
-    return this.name;
-  }
-  propKey = "propValiue";
-}
-```
-
-3. 接口参数限定
-
-```typescript
-let interfaceFunc = (params: IInterface): void => {};
 ```
 
 :::
